fix letter-spacing

--- a/src/assets/scss/_reset.scss
+++ b/src/assets/scss/_reset.scss
@@ -9,5 +9,5 @@ html {
   box-sizing: inherit;
   padding: 0;
   margin: 0;
-  letter-spacing: 0.1rem;
+  letter-spacing: 0.05rem;
 }
